[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="keyLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Key"
align = 1
valign = 1

[node name="mouseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 93.0
margin_right = 23.0
margin_bottom = 107.0
text = "Mouse"
align = 1
valign = 1

[node name="joyAxisLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -413.0
margin_top = -247.0
margin_right = -373.0
margin_bottom = -233.0
text = "Axis"
align = 1
valign = 1

[node name="joybuttonLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -413.0
margin_top = -172.0
margin_right = -370.0
margin_bottom = -158.0
text = "Button"
align = 1
valign = 1

[node name="nda" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -416.0
margin_top = -85.0
margin_right = -373.0
margin_bottom = -71.0
text = "Inputs que n√£o foram pegos"
align = 1
valign = 1
